# pocket-tts-mlx-serve

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pocket_tts_mlx_serve/: __init__.py  audio_streaming.py  main.py  worker.py
