[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-tts-mlx-serve"
version = "0.1.0"
description = "FastAPI server layer for pocket-tts-mlx"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "andyrightnow"}]
keywords = ["tts", "text-to-speech", "mlx", "fastapi", "pocket-tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pocket-tts-mlx>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "typing-extensions>=4.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
pocket-tts-mlx-serve = "pocket_tts_mlx_serve.main:serve_cli"

[project.urls]
Homepage = "https://github.com/andyrightnow/pocket-tts-mlx-serve"
Repository = "https://github.com/andyrightnow/pocket-tts-mlx-serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pocket_tts_mlx_serve = ["static/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

